samples/_failures_safe/1761216509_846c4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_852aff75.c: In function ‘main’:
./samples/SAFE/__tmp_852aff75.c:148:49: error: expected ‘)’ at end of input
  148 |                     for (int k = 0; k < cols1; k
      |                         ~                       ^
      |                                                 )
./samples/SAFE/__tmp_852aff75.c:148:21: error: expected declaration or statement at end of input
  148 |                     for (int k = 0; k < cols1; k
      |                     ^~~
./samples/SAFE/__tmp_852aff75.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_852aff75.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_852aff75.c:148:21: error: expected declaration or statement at end of input
